--- a/lab6_data_structure.ipynb
+++ b/lab6_data_structure.ipynb
@@ -625,6 +625,30 @@
     "s2 = Stock('GOOG', 1826.77, 1847.20, 1012.54)\n",
     "print(s2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 \n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start = time.time()\n",
+    "for i in range(10):\n",
+    "    print(i, end=\" \")\n",
+    "end = time.time()\n",
+    "print()\n",
+    "print(end - start)"
+   ]
   }
  ],
  "metadata": {
